Finished implementing new text API

--- a/Yodle-iOS-Training/Yodle-iOS-Training/Info.plist
+++ b/Yodle-iOS-Training/Yodle-iOS-Training/Info.plist
@@ -41,8 +41,10 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
-			<key>loripsum.net</key>
+			<key>filltext.com</key>
 			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
